style: reformat SCSS in dashboard for consistency and readability
- Reorganized SCSS properties in the dashboard component for better readability.
- Updated inconsistent spacing and formatting without modifying functionality.
- Replaced relative imports with absolute imports in toast-item component.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -181,12 +181,18 @@
         "ship": "Mark as shipped",
         "cancel": "Cancel transaction",
         "dispute": "Open a dispute",
+        "viewDispute": "View ongoing dispute",
         "confirmReception": "Confirm & release payment"
       }
     }
   },
   "disputes": {
     "title": "Disputes",
+    "chat": {
+      "system": "System",
+      "typingOne": "{{name}} is typing…",
+      "placeholder": "Your message…"
+    },
     "empty": {
       "title": "No disputes",
       "message": "Your disputes will appear here"
